Added Auto-Update Settings

--- a/Properties/Settings.settings
+++ b/Properties/Settings.settings
@@ -11,5 +11,8 @@
     <Setting Name="measurement" Type="System.Char" Scope="User">
       <Value Profile="(Default)">F</Value>
     </Setting>
+    <Setting Name="interval" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">30</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
